css/main_style.css
/* ... */
@-o-keyframes ticking {
    0% {
        transform: rotate(0deg)
    }

    47% {
        transform: rotate(0deg)
    }

    50% {
        transform: rotate(45deg)
    }

    97% {
        transform: rotate(45deg)
    }

    100% {
        transform: rotate(90deg)
    }
}

.text {
    color: floralwhite;
    font-family: 'Barlow semi Condensed', sans-serif;
}

.square {
    padding-left: 2vw;
}

.square i {
    font-size: 1.5vw;
}

.phrase {
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    text-align: center;
}



@media (min-width:576px) {
    h1 {
        font-size: 7vw;
    }

    h2 {
        font-size: 5vw;
    }

    h3 {
        font-size: 3em;
    }

}

@media (min-width:768px) {

    h2 {
        font-weight: 700;
        font-size: 4vw;
        letter-spacing: 2vw;
        line-height: 1.2;
    }

    .phrase h1 {
        font-size: 5vw;
    }

    p {
        font-size: 17px;
    }
    
    .phrase {
        text-align: left;
        align-items: flex-start;
    }
}

@media (min-width:1900px) {
    p {
        font-size: 19px;
        line-height: 25px;
    }
}

/*---- global style classes ----*/

.lg-only {
    display: none;
}

@media (min-width:768px) {
    .lg-only {
        display: block;
    }

    .mobile {
        display: none;
    }
}

/* 
    ========================
    == Top NavBar Styling ==
    ========================
*/


.page-nav {
    position: fixed;
    z-index: 4;
    width: 100%;
    height: 20vw;
    background-color: #111;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2% 10%;
    overflow: hidden;
}

#home-navbar {
    background-color: transparent;
}

#nav-color {
    position: fixed;
    z-index: 3;
    height: 10vh;
    width: 100%;
    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
    /* hex = #1d1d1b; */
}

.nav-land {
    height: 0;
}

.nav-logo {
    display: flex;
    overflow: hidden;
    padding: 5px 0;
}

.hover-text {
    display: none;
}

#cyberlogo {
    width: 7vw;
    fill: #fff;
    transition: fill 0.2s, width 0.2s;
}

#cyberlogo:active {
    fill: #F8EF00;
    width: 6.5vw;
}

/* menu btn */

#menu-btn {
    height: 20px;
    width: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
}

.menu-stroke {
    height: 2px;
    width: 20px;
    border-radius: 0.5px;
    background-color: floralwhite;
    transition: width 0.2s;
}

.closed .cross {
    width: 0px;
    position: absolute;
    top: 50%;
}

.open .burger {
    width: 0;
}

.open #cross01 {
    width: 25px;
    position: absolute;
    top: 50%;
    transform: rotate(45deg);
}

.open #cross02 {
    width: 25px;
    position: absolute;
    top: 50%;
    transform: rotate(-45deg);
}

.open {
    width: 25px;
}

@media (min-width:576px) {

    .page-nav {
        height: 10vh;
        padding: 0 5%;
    }

    #home-navbar {
        height: 18vh;
    }

    #nav-color {
        height: 10vh;
    }

    .hover-text {
        display: inline;
        align-self: center;
        width: 0;
        transition: width 0.4s ease;
        overflow: hidden;
    }

    .hover-text p {
        font-size: 0.7vw;
        letter-spacing: 4px;
        padding-left: 10%;
        margin: 0;
    }

    #cyberlogo {
        width: 35px;
    }
    
    #cyberlogo:active {
        fill: #F8EF00;
        width: 33px;
    }

    .nav-logo:hover #cyberlogo {
        fill: #F8EF00;
    }

    .nav-logo:hover .hover-text {
        fill: #F8EF00;
        width: 8vw;
    }

    #menu-btn:hover .burger {
        width: 3px;
        margin: 0 auto;
        background-color: #F8EF00;
    }

    #menu-btn:hover .cross {
        background-color: #F8EF00;
    }
}

/* 
    ==================
    == Menu Styling ==
    ==================
*/

#menu {
    position: fixed;
    right: 0%;
    z-index: 3;
    width: 0%;
    padding: 0;
    background-color: transparent;
    flex-direction: column;
    transition: width 0.3s ease;
}

#menu.open {
    width: 100%;
    height: 100vh;
}

#menu-links {
    width: 0%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    overflow: hidden;
    transition: width 0.3s 0.3s ease;
}

#menu-links.open {
    width: 80%;
    opacity: 1;
}

.menu-item {
    position: relative;
    z-index: 5;
    width: 100%;
    text-align: left;
    display: flex;
    padding: 3vh 0;
    overflow: hidden;
}

.menu-item:active * {
    color: #F8EF00;
}

.menu-item .plus {
    position: relative;
    font-size: 2em;
    font-weight: 300;
    line-height: 50%;
    padding: 0 5%;
    transition: opacity 0.3s ease;
}

#menu h1 {
    position: relative;
    font-weight: 800;
    font-size: 1.5em;
    letter-spacing: 0.4em;
    padding: 0;
    line-height: 1em;
}

.menu-item h4 {
    align-self: flex-start;
    font-size: 2.5vw;
    color: floralwhite;
    padding: 0 3%;
}

#menu-svg {
    position: fixed;
    top: 5vw;
    right: 7%;
    transform: translate(50%, -50%);
    fill: #111;
    width: 0;
    transition: width 0.5s ease, fill 0.5s ease;
}

#menu-svg.open {
    width: 480%;
    /*fill: #111;*/
}
/* ... */

